# freecodecamp_python_scientific

./: assignment_0_1.py  assignment_10_1.py  assignment_10_2.py  assignment_10_3.py  assignment_11_1.py  assignment_11_2.py  assignment_11_3.py  assignment_12_1.py  assignment_12_2.py  assignment_12_3.py  assignment_12_4.py  assignment_12_5.py  assignment_12_6.py  assignment_12_7.py  assignment_13_1.py  assignment_13_2.py  assignment_13_3.py  assignment_15_1.db  assignment_15_1.sqbpro  assignment_15_2.py  assignment_15_3.py  assignment_15_4.py  assignment_2_1.py  assignment_2_2.py  assignment_2_5.py  assignment_3_2.py  assignment_3_3.py  assignment_4_1.py  assignment_4_7.py  assignment_5_1.py  assignment_5_2.py  assignment_6_1.py  assignment_6_2.py  assignment_6_3.py  assignment_6_4.py  assignment_7_1.py  assignment_7_3.py  assignment_8_1.py  assignment_8_2.py  assignment_8_6.py  (+47 more)
project_arithmetic_formatter/: arithmetic_arranger.py  main.py
project_budget_app/: budget.py  main.py
project_polygon_area_calculator/: main.py  shape_calculator.py
project_probability_calculator/: main.py  prob_calculator.py
project_time_calculator/: main.py  time_calculator.py
